src/objects/agf__ADM_Column__c.object
<CustomObject>
    <description>Used to store meta data for a team&apos;s kanban board</description>
    <fields>
        <fullName>agf__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active field value true/false can be used to delete or undelete a column. Active__c = false will soft delete the column and will not show up in the Kanban board for the team</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Level__c</fullName>
        <label>Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Max_Number_of_Records__c</fullName>
        <label>Max # of Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Column</label>
        <referenceTo>agf__ADM_Column__c</referenceTo>
        <relationshipLabel>Columns</relationshipLabel>
        <relationshipName>Columns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Position__c</fullName>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Columns</relationshipLabel>
        <relationshipName>Columns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>